# home-assistant-hg612

./: .mise.toml  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/hg612/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  parser.py  sensor.py  strings.json  telnet.py
tests/: test_config_flow.py  test_coordinator.py  test_parse_stats.py  testdata.txt
